--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,4 +8,5 @@ uid:<%= user.uid%>pass:<%= user.pass%>
 <% end %>
 </body>
 <br>
+<p><%= link_to 'メイン', root_path %></p>
 <p><%= link_to 'ユーザー登録', '/users/new' %></p>
